# testuWS

./: .gitignore  testuWS.sln
testuWS/: CMakeLists.txt  main.cpp  testuWS.vcxproj
testuWS/x64/Debug/: vc141.idb
testuWS/x64/Debug/testuWS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.3088.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testuWS.lastbuildstate  testuWS.write.1u.tlog
